selfhost/tests/neg/tryctx.ail
// EXPECT: '?' used outside a function returning !T
x := ok(5)
y := x?
println(y)
